Fix article layout and spacing

--- a/app/assets/stylesheets/components/insights/c-article.scss
+++ b/app/assets/stylesheets/components/insights/c-article.scss
@@ -60,7 +60,7 @@
   }
 
   .article-content {
-    padding: 30px 0;
+    padding-top: 30px;
 
     .article-text {
       display: flex;
@@ -198,7 +198,7 @@
     .footer-article {
       display: flex;
       justify-content: center;
-      margin: 60px 0 0;
+      margin: 20px 0 0;
     }
   }
 }
